[package]
name = "rtp_all"
version = "0.1.0"
authors = ["amiya <amiyaktmandal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp-rs = "0.5.0"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["full"] }